--- a/block model/css/style.css
+++ b/block model/css/style.css
@@ -66,6 +66,7 @@ p {
 }
 
 .card-title {
+  height: 44px;
   padding: 0 10px;
   text-align: center;
   margin-bottom: 10px;
@@ -73,6 +74,7 @@ p {
   font-size: 18px;
   line-height: 1.22;
   color: #000000;
+  overflow: hidden;
 }
 
 .card-text {
