--- a/block model/css/style.css
+++ b/block model/css/style.css
@@ -33,6 +33,7 @@ p {
 .card {
   display: inline-block;
   width: calc((100% - 60px) / 3);
+  padding-bottom: 18px;
   font-size: 14px;
   background-color: #E0E0E0;
   box-shadow: -7px 13px 14px rgba(107, 176, 191, .35);
@@ -71,7 +72,6 @@ p {
   height: 36px;
   padding: 0 10px;
   text-align: center;
-  margin-bottom: 18px;
   line-height: 1.29;
   color: #000000;
   overflow: hidden;
