--- a/flexbox/css/main.css
+++ b/flexbox/css/main.css
@@ -319,16 +319,262 @@ img {
   padding-bottom: 187px;
 }
 
-.productivity-title {}
+.productivity-title {
+  font-size: 50px;
+  margin-bottom: 25px;
+}
 
-.productivity-list {}
+.productivity-list {
+  display: flex;
+  gap: 30px;
+}
 
-.list {}
+.productivity-item {
+  flex-basis: calc((100% - 60px) / 3);
+}
 
-.productivity-item {}
+.productivity-pic {
+  min-height: 300px;
+  display: flex;
+  align-items: center;
+}
 
-.title-font {}
+.productivity-subtitle {
+  font-size: 30px;
+  line-height: 1.33;
+  margin-bottom: 34px;
+}
 
-.productivity-text {}
+.productivity-text {
+  line-height: 1.5;
+  margin-bottom: 25px;
+}
 
-.productivity-link {}
+.productivity-text a {
+  color: inherit;
+}
+
+.productivity-link {
+  color: inherit;
+  line-height: 1.5;
+}
+
+/**
+  |============================
+  | attitude
+  |============================
+*/
+
+.attitude {
+  padding-top: 53px;
+  padding-bottom: 105px;
+  background-color: #C9E8F2;
+}
+
+.attitude-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.attitude-item:first-child {
+  width: 895px;
+}
+
+.attitude-cite {
+  font-size: 30px;
+  line-height: 1.33;
+  margin: 0 0 23px;
+}
+
+.cite-author {
+  font-size: 15px;
+  line-height: 1.67;
+  margin-bottom: 7px;
+}
+
+/**
+  |============================
+  | translation
+  |============================
+*/
+
+.translation {
+  background-color: #DABC98;
+  padding-top: 70px;
+  padding-bottom: 84px;
+}
+
+.translation-title {
+  margin-top: 47px;
+  border-bottom: 31px;
+  margin-left: 67px;
+  font-size: 35px;
+  line-height: 1.43;
+}
+
+.translation-sublist {
+  width: 481px;
+  gap: 70px;
+  padding: 30px 62px 22px 71px;
+  border-left: 1px solid currentColor;
+}
+
+.app-text {
+  font-size: 15px;
+  line-height: 1.67;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+}
+
+/**
+  |============================
+  | integrate
+  |============================
+*/
+
+.integrate {
+  padding-top: 165px;
+  padding-bottom: 162px;
+  text-align: center;
+}
+
+.integrate-title {
+  width: 791px;
+  margin: 0 auto;
+  font-size: 65px;
+  line-height: 1.15;
+}
+
+.integrate-text {
+  width: 539px;
+  margin: 0 auto 25px;
+  font-size: 25px;
+}
+
+.integrat-img {
+  margin: 0 auto 32px;
+}
+
+.integrate .btn {
+  display: inline-flex;
+  align-items: center;
+}
+
+/**
+  |============================
+  | cta
+  |============================
+*/
+
+.cta {
+  padding-top: 119px;
+  padding-bottom: 161px;
+  background-color: var(--second-bg-color);
+  text-align: center;
+}
+
+.cta-title {
+  width: 784px;
+  margin: 0 auto 29px;
+  font-size: 65px;
+  line-height: 1.15;
+}
+
+.cta-text {
+  margin-bottom: 54px;
+  line-height: 1.5;
+}
+
+.cta .btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  background-color: #000000;
+}
+
+/**
+  |============================
+  | footer
+  |============================
+*/
+
+.foot {
+  padding-top: 92px;
+  padding-bottom: 43px;
+  background-color: #EEEEEE;
+}
+
+.up-box {
+  padding-bottom: 95px;
+  border-bottom: 1px solid #000000;
+  display: flex;
+  gap: 140px;
+}
+
+.studies-title {
+  font-size: 40px;
+  line-height: 1.25;
+  margin-bottom: 28px;
+}
+
+.studies-logo {
+  width: 80px;
+  height: 32px;
+  margin-top: 31px;
+  margin-bottom: 11px;
+}
+
+.studies-text {
+  width: 290px;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+.studies-link {
+  display: block;
+  line-height: 1.5;
+}
+
+.contacts-list {
+  display: flex;
+  gap: 34px;
+  flex-grow: 1;
+}
+
+
+.contacts-item {
+  flex-basis: 187px;
+}
+
+.contacts-title {
+  line-height: 1.25;
+  margin-bottom: 21px;
+}
+
+.contacts-subitem:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.contacts-sublink {
+  display: block;
+  font-size: 15px;
+  line-height: 1;
+}
+
+.down-box {
+  padding-top: 48px;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.25;
+}
+
+.down-box-link {
+  margin-right: 14px;
+}
+
+.down-box-text {
+  width: 301px;
+  margin-right: 700px;
+}
