--- a/font/css/style.css
+++ b/font/css/style.css
@@ -26,6 +26,7 @@
 
 body {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
   color: #000000;
